# Safe_Agentathon

./: README.md  pyproject.toml  report.md  requirements.txt
knowledge/: asset_types.txt
src/alloc8_agent/: constants.py  crew.py  main.py  utils.py
src/alloc8_agent/config/: agents.yaml  tasks.yaml
src/alloc8_agent/tools/: camelot_tools.py  custom_tool.py
