[project]
name = "alloc8_agent"
version = "0.1.0"
description = "alloc8-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
alloc8_agent = "alloc8_agent.main:run"
run_crew = "alloc8_agent.main:run"
train = "alloc8_agent.main:train"
replay = "alloc8_agent.main:replay"
test = "alloc8_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
